--- a/deploy-playbook.yml
+++ b/deploy-playbook.yml
@@ -6,15 +6,9 @@
     ansible_python_interpreter: /usr/bin/python3
   tasks:
     - name: Remove Docker Container
-      docker_container:
-        name: calculator
-        image: krutik420/miniproj
-        state: absent
+      shell: docker kill $(docker ps -q)
     - name: Remove Docker Image
-      docker_image:
-        name: krutik420/miniproj
-          #       tag: latest
-        state: absent
+      shell: docker rmi $(docker ps -a -q)
     - name: Pull Docker Image
       docker_image:
         name: krutik420/miniproj
