change in playbook 2

--- a/deploy-playbook.yml
+++ b/deploy-playbook.yml
@@ -6,9 +6,11 @@
     ansible_python_interpreter: /usr/bin/python3
   tasks:
     - name: Remove Docker Container
-      shell: docker kill $(docker ps -q)
+      #shell: docker kill $(docker ps -q)
+      shell: echo 'hello'
     - name: Remove Docker Image
-      shell: docker rmi $(docker ps -a -q)
+      shell: docker --version
+      #shell: docker rmi $(docker ps -a -q)
     - name: Pull Docker Image
       docker_image:
         name: krutik420/miniproj
